--- a/dvc.yaml
+++ b/dvc.yaml
@@ -6,6 +6,8 @@ stages:
     outs:
     - data\raw\test.csv
     - data\raw\train.csv
+    params:
+    - data_ingestion.test_size
   data_preprocessing:
     cmd: python src\data\data_preprocessing.py
     deps:
@@ -24,6 +26,8 @@ stages:
     outs:
     - data\interim\test_bow.csv
     - data\interim\train_bow.csv
+    params:
+    - feature_engg.max_features
   modelling:
     cmd: python src\models\modelling.py
     deps:
@@ -39,3 +43,6 @@ stages:
     - src\models\model_evaluation.py
     outs:
     - reports\evaluation_metrics.json
+    params:
+    - modelling.n_estimators
+    - modelling.max_depth
